Fix the tooltip on mobile

--- a/app/assets/stylesheets/module-consultations.scss
+++ b/app/assets/stylesheets/module-consultations.scss
@@ -611,12 +611,15 @@ img.side_50 {
   background: url(image_path('tipsy')) no-repeat top left;
   width: 9px;
   height: 5px;
-  transform: rotate(180deg);
   background: url(image_path('tipsy_info'));
   bottom: 0;
   left: 50%;
   margin-left: -4px;
   background-position: bottom left;
+  
+  @include min-screen(768) {
+    transform: rotate(180deg);
+  }
 }
 .tip-info .tipsy-inner {
   background: $color_main;
